--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -4,7 +4,7 @@
   <!-- interface-name window.ui -->
   <requires lib="gtk" version="4.10"/>
   <requires lib="libadwaita" version="1.3"/>
-  <template class="DsrssrWindow" parent="AdwApplicationWindow">
+  <template class="DrssrWindow" parent="AdwApplicationWindow">
     <property name="default-height">500</property>
     <property name="default-width">800</property>
     <child>
@@ -73,6 +73,7 @@
                         <property name="child">
                           <object class="GtkListBox" id="listbox">
                             <property name="css-classes">boxed-list</property>
+                            <property name="halign">center</property>
                             <property name="show-separators">True</property>
                             <property name="valign">center</property>
                             <property name="vexpand">True</property>
