--- a/data/ui/list_item.ui
+++ b/data/ui/list_item.ui
@@ -5,6 +5,7 @@
   <requires lib="gtk" version="4.10"/>
   <requires lib="libadwaita" version="1.3"/>
   <template class="list_item" parent="GtkListBoxRow">
+    <property name="height-request">75</property>
     <child>
       <object class="GtkGrid" id="main_grid">
         <child>
@@ -29,7 +30,6 @@
             <child>
               <object class="GtkLabel" id="label_feed_title">
                 <property name="css-classes">heading</property>
-                <property name="ellipsize">end</property>
                 <property name="halign">start</property>
                 <property name="hexpand">True</property>
                 <property name="natural-wrap-mode">word</property>
