--- a/data/ui/manage_feed.ui
+++ b/data/ui/manage_feed.ui
@@ -31,7 +31,7 @@
                 <child>
                   <object class="GtkListBox" id="listbox">
                     <property name="css-classes">boxed-list</property>
-                    <property name="halign">center</property>
+                    <property name="hexpand">True</property>
                     <property name="valign">center</property>
                     <property name="vexpand">True</property>
                   </object>
