--- a/data/ui/list_item.ui
+++ b/data/ui/list_item.ui
@@ -57,6 +57,8 @@
                         <property name="halign">end</property>
                         <property name="justify">right</property>
                         <property name="margin-end">5</property>
+                        <property name="use-markup">True</property>
+                        <style/>
                       </object>
                     </child>
                   </object>
