--- a/data/ui/list_item.ui
+++ b/data/ui/list_item.ui
@@ -3,26 +3,10 @@
 <interface>
   <!-- interface-name listitem.ui -->
   <requires lib="gtk" version="4.10"/>
-  <requires lib="libadwaita" version="1.3"/>
   <template class="list_item" parent="GtkListBoxRow">
     <property name="height-request">75</property>
     <child>
       <object class="GtkGrid" id="main_grid">
-        <child>
-          <object class="AdwAvatar" id="feed_avatar">
-            <property name="halign">center</property>
-            <property name="show-initials">True</property>
-            <property name="valign">center</property>
-            <property name="vexpand">True</property>
-            <property name="width-request">60</property>
-            <layout>
-              <property name="column">0</property>
-              <property name="column-span">1</property>
-              <property name="row">0</property>
-              <property name="row-span">1</property>
-            </layout>
-          </object>
-        </child>
         <child>
           <object class="GtkBox" id="title_box">
             <property name="hexpand">True</property>
@@ -67,6 +51,24 @@
             </child>
             <layout>
               <property name="column">1</property>
+              <property name="column-span">1</property>
+              <property name="row">0</property>
+              <property name="row-span">1</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="button_open_in_browser">
+            <property name="css-classes">suggested-action</property>
+            <property name="halign">center</property>
+            <property name="icon-name">computer-symbolic</property>
+            <property name="margin-end">15</property>
+            <property name="margin-start">15</property>
+            <property name="valign">center</property>
+            <property name="vexpand">True</property>
+            <style/>
+            <layout>
+              <property name="column">0</property>
               <property name="column-span">1</property>
               <property name="row">0</property>
               <property name="row-span">1</property>
