--- a/data/ui/list_item.ui
+++ b/data/ui/list_item.ui
@@ -5,8 +5,12 @@
   <requires lib="gtk" version="4.10"/>
   <template class="list_item" parent="GtkListBoxRow">
     <property name="height-request">75</property>
+    <property name="hexpand">True</property>
+    <property name="vexpand">True</property>
+    <property name="width-request">800</property>
     <child>
       <object class="GtkGrid" id="main_grid">
+        <property name="hexpand">True</property>
         <child>
           <object class="GtkBox" id="title_box">
             <property name="hexpand">True</property>
@@ -14,8 +18,10 @@
             <child>
               <object class="GtkLabel" id="label_feed_title">
                 <property name="css-classes">heading</property>
+                <property name="ellipsize">end</property>
                 <property name="halign">start</property>
                 <property name="hexpand">True</property>
+                <property name="max-width-chars">1</property>
                 <property name="natural-wrap-mode">word</property>
                 <property name="vexpand">True</property>
                 <property name="wrap">True</property>
